# ssg-quarto-website-stage-for-delete

./: README.md
code/: README.md  bios.xlsx  jdleonard.qmd  my_excel_file.xlsx  pyproject.toml
code/src/: _main.py
docs/: CNAME  about.html  index.html  installation.html  listings.json  search.json  style.css  usersguide.html
docs/about/: about-leonard.html  jdleonard.html
docs/pages/about/: index.html
docs/pages/about/inho-park/: index.html
docs/pages/about/john-leonard/: index.html
docs/pages/projects/: index.html
docs/pages/projects/posts/2022-02-13-feature-callouts/: index.html
docs/pages/projects/posts/2022-02-15-feature-tables/: index.html
docs/pages/projects/posts/2023-03-20-confluence/: index.html
docs/pages/students/: index.html
docs/site_libs/bootstrap/: bootstrap.min.css
website/: .gitignore  Makefile  _quarto.yml  about.qmd  index.qmd  installation.qmd  js.html  style.css  usersguide.qmd
website/.quarto/idx/: about.qmd.json  index.qmd.json
website/.quarto/idx/about/: about-leonard.qmd.json
website/.quarto/xref/: 7ca9109a  INDEX
website/_site/: about.html  index.html  search.json
website/about/: about-leonard.qmd  bios.xlsx
website/assets/: Benton-VCU SteerCo 030923.pptx  quarto_ssgvip.scss
website/docs/: about.html  index.html  search.json  style.css  style.scss
website/docs/about/: about-leonard.html
website/pages/about/: about.yml  index.qmd
website/pages/about/assets/: quarto_ssgvip.scss
website/pages/about/inho-park/: index.qmd
website/pages/about/john-leonard/: index.qmd
website/pages/projects/: index.qmd
(+5 files in other folders)
